yaml/h4cksh-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h4cksh-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - h4ck.sh
    secretName: h4cksh-tls
  rules:
  - host: h4ck.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: h4cksh-web
            port:
              number: 8000
